google search api etc

--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,6 @@ WORDPRESS_APP_PASSWORD=0B6TGz5rTO3a35ICpvR9cmae
 TAVILY_API_KEY=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
 #제미나이이
 GEMINI_API_KEY=AIzaSyCz4ByGdC7f-NrEm9WhacJ3ues1oDGi0ow
+
+GOOGLE_SEARCH_API_KEY=AIzaSyD7lDuGpAfLjmDv_s92tF8Q4jxAvnQ7WdU
+GOOGLE_SEARCH_CX=b68834efd6eab4262
